<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Trauma Care 60</string>
    <string name="action_settings">Settings</string>
    <string name="app_id">593229987471307</string>
    <string name="string1">Main Menu</string>
    <string name="string2">Icon</string>

    <color name="blue">#3b7cd9</color>
    <color name="black">#000000</color>
    <color name="red">#ff0000</color>
    <color name="white">#ffffff</color>

    <string name="pref_auto_mode">Auto mode</string>
    <string name="pref_auto_mode_summary">Emergency tasks will be performed automatically in case of an accident</string>
    <string name="pref_loudspeaker">Loudspeaker</string>
    <string name="pref_loudspeaker_summary">Call to ambulance service provider will be put on loudspeaker automatically</string>
    <string name="pref_asp">Ambulance service provider</string>
    <string name="pref_asp_default">102</string>
    <string name="pref_ec">Emergency contacts</string>
    <string name="pref_hfr">Hospital finder range in km</string>
    <string name="pref_hfr_default">5</string>
    <string name="title_activity_initial_setup">Initial Setup</string>
    <string name="preference_initial_setup">mg.traumacare60.preference_initial_setup</string>
    <string name="preference_initial_setup_completion_status">preference_initial_setup_completion_status</string>
    <string name="title_activity_tips">Tips</string>
    <string name="title_activity_nh">Nearby Hospitals</string>
    <string name="title_activity_car_stopper">Car Stopper</string>
    <string name="title_activity_md">Medical Data</string>
    <string name="string3">HV Button</string>
    <string name="pref_aadhaar_no">Aadhaar no.</string>
    <string name="string4">Your Aadhaar No:</string>
    <string name="title_activity_ct">Camera Tasks</string>
    <string name="action_listings_by">Listings by</string>
    <string name="title_activity_lb">Listings by</string>
    <string name="string5">Capture photo</string>
    <string name="string6">Capture video</string>
    <string name="string7">HealthVault</string>
    <string name="string8">Add emergency contact</string>
    <string name="string9">Skip</string>
    <string name="title_activity_about">About</string>
    <string name="string10">Trauma Care 60v1.0\nDeveloper: Manojit Ghosh</string>

</resources>
